<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">スポット検索</string>
    <string name="list1">飲食店</string>
    <string name="list1_1">居酒屋</string>
    <string name="list1_2">レストラン</string>
    <string name="list1_3">カフェ</string>
    <string name="list2">レジャー施設</string>
    <string name="list3">お土産屋さん</string>
    <string name="list4">コンビニエンスストア</string>
    <string name="list5">詳細検索</string>
    <string name="action_settings">Settings</string>
    <string name="search">検索ボタン</string>
    <string name="description">検索したいお店のジャンル等を選択してください</string>
    <string name="station">駅名を指定する</string>
    <string name="station_hint">駅名を入力してください</string>
    <string name="distance">距離を指定する</string>
    <string name="image_description0">飲食店マーク</string>
    <string name="image_description1">下矢印マーク</string>
    <string name="image_description2">最寄りマーク</string>
    <string name="radio1">徒歩1分圏内</string>
    <string name="radio2">徒歩5分圏内</string>
    <string name="radio3">徒歩10分圏内</string>
    <string name="radio4">徒歩15分圏内</string>

</resources>
